syntax = "proto3";
package comdex.auction.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/auction/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message SurplusAuction {
    uint64 auction_id = 1 [
        (gogoproto.moretags) = "yaml:\"auction_id\""
    ];

    cosmos.base.v1beta1.Coin sell_token = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"sell_token\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin buy_token = 3 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"buy_token\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    uint64 active_bidding_id = 4 [
        (gogoproto.moretags) = "yaml:\"active_bidding_id\""
    ];
    string bidder = 5 [
        (gogoproto.moretags) = "yaml:\"bidder\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.AccAddress"
    ];

    cosmos.base.v1beta1.Coin bid = 6 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"bid\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];

    google.protobuf.Timestamp end_time = 7 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"end_time\""
    ];

    string bid_factor = 8 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"bid_factor\""
    ];

    repeated bidOwnerMapping bidding_ids = 9[
        (gogoproto.moretags) = "yaml:\"bidding_ids\""
    ];

    uint64 auction_status = 10 [
        (gogoproto.moretags) = "yaml:\"auction_status\""
    ];
    uint64 app_id = 11 [
        (gogoproto.moretags) = "yaml:\"app_id\""
    ];
    uint64 asset_id = 12 [
        (gogoproto.moretags) = "yaml:\"asset_id\""
    ];
    uint64 auction_mapping_id = 13 [
        (gogoproto.moretags) = "yaml:\"auction_mapping_id\""
    ];
    uint64 asset_in_id = 14 [
        (gogoproto.moretags) = "yaml:\"asset_in_id\""
    ];
    uint64 asset_out_id = 15 [
        (gogoproto.moretags) = "yaml:\"asset_out_id\""
    ];
    google.protobuf.Timestamp bid_end_time = 16 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"bid_end_time\""
    ];
  }

message DebtAuction {
    uint64 auction_id = 1 [
        (gogoproto.moretags) = "yaml:\"auction_id\""
    ];
    cosmos.base.v1beta1.Coin auctioned_token = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"auctioned_token\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin expected_user_token = 3 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"expected_user_token\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin expected_minted_token = 4 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"expected_minted_token\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    google.protobuf.Timestamp end_time = 5 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"end_time\""
    ];
    uint64 active_bidding_id = 6 [
        (gogoproto.moretags) = "yaml:\"active_bidding_id\""
    ];
    string bidder = 7 [
        (gogoproto.moretags) = "yaml:\"bidder\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.AccAddress"
    ];
    cosmos.base.v1beta1.Coin current_bid_amount = 8 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"current_bid_amount\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    uint64 auction_status = 9 [
        (gogoproto.moretags) = "yaml:\"auction_status\""
    ];
    uint64 app_id = 10 [
        (gogoproto.moretags) = "yaml:\"app_id\""
    ];
    uint64 asset_id = 11 [
        (gogoproto.moretags) = "yaml:\"asset_id\""
    ];
    repeated bidOwnerMapping bidding_ids = 12[
        (gogoproto.moretags) = "yaml:\"bidding_ids\""
    ];
    uint64 auction_mapping_id = 13 [
        (gogoproto.moretags) = "yaml:\"auction_mapping_id\""
    ];
    string bid_factor = 14 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"bid_factor\""
    ];
    uint64 asset_in_id = 15 [
        (gogoproto.moretags) = "yaml:\"asset_in_id\""
    ];
    uint64 asset_out_id = 16 [
        (gogoproto.moretags) = "yaml:\"asset_out_id\""
    ];
    google.protobuf.Timestamp bid_end_time = 17 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"bid_end_time\""
    ];
}


message DutchAuction {
    uint64 auction_id = 1 [
        (gogoproto.moretags) = "yaml:\"auction_id\""
    ];
    cosmos.base.v1beta1.Coin outflow_token_init_amount = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"outflow_token_init_amount\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin outflow_token_current_amount = 3 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"outflow_token_current_amount\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin inflow_token_target_amount = 4 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"inflow_token_target_amount\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    cosmos.base.v1beta1.Coin inflow_token_current_amount = 5 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"inflow_token_current_amount\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    string outflow_token_initial_price = 6 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"outflow_token_initial_price\""
    ];
    string outflow_token_current_price = 7 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"outflow_token_current_price\""
    ];
    string outflow_token_end_price = 8 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"outflow_token_end_price\""
    ];
    string inflow_token_current_price = 9 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"inflow_token_current_price\""
    ];

    google.protobuf.Timestamp end_time = 10 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"end_time\""
    ];
    uint64 auction_status = 11 [
        (gogoproto.moretags) = "yaml:\"auction_status\""
    ];
    google.protobuf.Timestamp start_time = 12 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"start_time\""
    ];
    repeated bidOwnerMapping bidding_ids = 13[
        (gogoproto.moretags) = "yaml:\"bidding_ids\""
    ];
    uint64 auction_mapping_id = 14 [
        (gogoproto.moretags) = "yaml:\"auction_mapping_id\""
    ];
    uint64 app_id = 15 [
        (gogoproto.moretags) = "yaml:\"app_id\""
    ];
    uint64 asset_in_id = 16 [
        (gogoproto.moretags) = "yaml:\"asset_in_id\""
    ];
    uint64 asset_out_id = 17 [
        (gogoproto.moretags) = "yaml:\"asset_out_id\""
    ];
    uint64 locked_vault_id = 18 [
        (gogoproto.moretags) = "yaml:\"locked_vault_id\""
    ];
    string vault_owner = 19 [
        (gogoproto.moretags) = "yaml:\"vault_owner\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.AccAddress"
    ];
    string liquidation_penalty = 20 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"liquidatin_penalty\""
    ];
}

message bidOwnerMapping{
uint64 bid_id=1;
string bid_owner=2;
}

message ProtocolStatistics {
    uint64 app_id = 1 [
        (gogoproto.moretags) = "yaml:\"app_id\""
    ];
    uint64 asset_id = 2 [
        (gogoproto.moretags) = "yaml:\"asset_id\""
    ];
    string loss = 3[
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"loss\""
    ];
}

message AuctionParams{
    uint64 app_id = 1 [
        (gogoproto.moretags) = "yaml:\"app_id\""
    ];
    uint64 auction_duration_seconds = 2 [
        (gogoproto.moretags) = "yaml:\"auction_duration_seconds\""
    ];
    string buffer = 3 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"buffer\""
    ];
    string cusp = 4 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"cusp\""
    ];
    string step = 5 [
        (gogoproto.customtype) = "cosmossdk.io/math.Int",
        (gogoproto.nullable)   = false,
        (gogoproto.moretags)   = "yaml:\"step\""
    ];
    uint64 price_function_type = 6 [
        (gogoproto.moretags) = "yaml:\"price_function_type\""
    ];
    uint64 surplus_id = 7 [
        (gogoproto.moretags) = "yaml:\"surplus_id\""
    ];
    uint64 debt_id = 8 [
        (gogoproto.moretags) = "yaml:\"debt_id\""
    ];
    uint64 dutch_id = 9 [
        (gogoproto.moretags) = "yaml:\"dutch_id\""
    ];
    uint64 bid_duration_seconds = 10 [
        (gogoproto.moretags) = "yaml:\"bid_duration_seconds\""
    ];
}